[package]
name = "tictactoe_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local libraries
meerkat_common = { path = "../common"}
meerkat_ecs_lib = { path = "../ecs_lib"}

# Deps
anyhow = "1.0.57"
bevy = "0.7"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
iyes_loopless = "0.6.1"
multiarray = "0.1.3"

# We might need these later
# fern = { version = "0.6", features = ["colored"] }
# lazy_static = "1.4.0"
# chrono = "0.4.19"
# rapier3d = "0.13.0"
# nalgebra = "0.31.0"
# multiarray = "0.1.3"