[package]
name = "tictactoe_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local libraries
meerkat_common = { path = "../../common" }
meerkat_ecs_lib = { path = "../../ecs_lib" }

# Deps
anyhow = "1.0.66"
bevy = "0.10"
iyes_progress = { version = "0.8", features = [ "assets" ], git = "https://github.com/NiklasEi/iyes_progress", branch = "bevy_main"  }
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
multiarray = "0.1.3"
rand = "0.8.5"
lazy_static = "1.4.0"
async_once = "0.2.6"

# Cloud stuff
jsonrpsee = { version = "0.16.1", features = ["macros", "server", "client-ws-transport", "ws-client"] }
tictactoe_3d_api_lib = { path = "../api" }

# We might need these later
# fern = { version = "0.6", features = ["colored"] }
# chrono = "0.4.19"
# rapier3d = "0.13.0"
# nalgebra = "0.31.0"
# multiarray = "0.1.3"