[package]
name = "tictactoe_3d_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local libraries
meerkat_common = { path = "../../common" }

# Deps
anyhow = "1.0.66"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Cloud stuff
jsonrpsee = { version = "0.16.1", features = ["macros", "server", "client-ws-transport", "ws-client"] }
tictactoe_3d_api_lib = { path = "../api" }